2004-03-16  Marcus Brinkmann  <marcus@gnu.org>

	* sigma0.c: Rewritten to use new interface.
	* wortel.c (make_fpages): Use L4_FPAGE_FULLY_ACCESSIBLE, not
	l4_fully_accessible.
	(start_components): Use new message interface.
	(serve_bootstrap_requests): Likewise.
	* loader.h (loader_get_memory_desc): Change return type to
	l4_memory_desc_t *.
	* wortel.c (loader_get_memory_desc): Change return type to
	l4_memory_desc_t *.
	* loader.c (mem_check): Change type of MEMDESC to l4_memory_desc_t *.
	* shutdown.c (halt): Use L4_NEVER, not l4_never.
	* ia32-cmain.c (add_unused_area): Use L4_FPAGE_FULLY_ACCESSIBLE,
	not l4_fully_accessible.

2003-10-26  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile.am (AM_CPPFLAGS): Removed.
	(wortel_CFLAGS): Rename to ...
	(wortel_CPPFLAGS): Add AM_CPPFLAGS.  Change
	-I$(top_srcdir)/include to -I$(top_builddir).

2003-10-12  Marcus Brinkmann  <marcus@gnu.org>

	* config.m4: New file.
	* Makefile.am (wortel_LDFLAGS): Replace load address with
	@HURD_WORTEL_LOAD_ADDRESS@.

2003-10-04  Marcus Brinkmann  <marcus@gnu.org>

	* loader.c: Include <l4/kip.h>.
	(mem_check): Change type of address args to l4_word_t.  Use
	l4_memory_desc_low and l4_memory_desc_high to determine range of
	memory descriptor.  The high address is inclusive now, so take
	this into account.  Allow conventional memory descriptors to
	override non-conventional.  Use L4_PRIxWORD.

2003-10-01  Johan Rydberg  <jrydberg@night.trouble.net>

	* wortel.c (serve_bootstrap_requests): Only throw away page zero
	if it list as conventinal in memory descriptors.

2003-09-29  Marcus Brinkmann  <marcus@gnu.org>

	* loader.c (loader_elf_load): Fix wordsize check.  Submitted by
	Johan Rydberg.

2003-09-25  Marcus Brinkmann  <marcus@gnu.org>

	* loader.c [HAVE_CONFIG_H]: Include <config.h>.
	(loader_elf_load): Rewritten architecture check of ELF binary,
	support PPC now.

2003-09-25  Marcus Brinkmann  <marcus@gnu.org>

	* elf.h: Remove cruft.
